# AY23-24_SWE_StaticProgramAnalyzer

./: .gitattributes  .gitignore  README.md  windows.yaml
Team11/Code11/: .clang-format  .clangd  .gitignore  CMakeLists.txt  code_coverage.py  run_lint.sh
Team11/Code11/cmake/: CodeCoverage.cmake
Team11/Code11/lib/: catch.hpp
Team11/Code11/src/autotester/: CMakeLists.txt
Team11/Code11/src/autotester/include/: AbstractWrapper.h  TestWrapper.h
Team11/Code11/src/autotester/src/: AbstractWrapper.h  TestWrapper.cpp  main.cpp
Team11/Code11/src/autotester_gui/src/: GUIWrapper.cpp  GUIWrapper.h  codeeditor.cpp  codeeditor.h  main.cpp  mainwindow.cpp  mainwindow.h
Team11/Code11/src/integration_testing/: CMakeLists.txt
Team11/Code11/src/integration_testing/src/: TestBackEnd.cpp  TestFrontEnd.cpp  TestSPA.cpp  TestSpAndPkb.cpp
Team11/Code11/src/integration_testing/src/SpAndPkb/traverser/: TestSPDesignEntitiesPopulatorTraverser.cpp  TestSPFollowsTraverser.cpp  TestSPModifiesTraverser.cpp  TestSPNextTraverser.cpp  TestSPParentTraverser.cpp  TestSPUsesTraverser.cpp
Team11/Code11/src/integration_testing/src/SpAndPkb/validator/: TestSPCallGraphTraverser.cpp
Team11/Code11/src/spa/: CMakeLists.txt
Team11/Code11/src/spa/docs/: Doxyfile.in
Team11/Code11/src/spa/include/PKB/: PKB.h
Team11/Code11/src/spa/include/PKB/CommonTypes/: Constant.h  Entity.h  Procedure.h  Statement.h  Variable.h
Team11/Code11/src/spa/include/PKB/Facades/: ReadFacade.h  WriteFacade.h
Team11/Code11/src/spa/include/PKB/Stores/: CallsStore.h  EntityStore.h  FollowsStore.h  ModifiesStore.h  NextStore.h  ParentStore.h  StatementStore.h  UsesStore.h
Team11/Code11/src/spa/include/common/: StatementType.h  hashable_tuple.h  statement_type.hpp
Team11/Code11/src/spa/include/common/ast/: ast.hpp  binary_node_ast.hpp  expr.hpp  factor_ast.hpp  logical_ast.hpp  node_type.hpp  node_type_checker.hpp  null_ast.hpp  procedure_ast.hpp  program_ast.hpp  rel_expr_ast.hpp  statement_ast.hpp  statement_list_ast.hpp
Team11/Code11/src/spa/include/common/cfg/: cfg.hpp
Team11/Code11/src/spa/include/common/tokeniser/: binop.hpp  delimiter.hpp  integer.hpp  junk.hpp  runner.hpp  string.hpp  token_types.hpp  tokenizer.hpp
Team11/Code11/src/spa/include/common/utils/: algo.h
Team11/Code11/src/spa/include/pkb/: CommonTypes.h  FollowsStore.h  PKB.h  ParentStore.h  PkbTypes.h  pkb.h  pkb_manager.h
Team11/Code11/src/spa/include/pkb/Facades/: ReadFacade.h  WriteFacade.h
Team11/Code11/src/spa/include/pkb/Stores/: EntityStore.h  FollowsStore.h  ParentStore.h
Team11/Code11/src/spa/include/pkb/abstract_stores/: many_to_many_store.h  many_to_many_store.tpp  many_to_one_store.h  many_to_one_store.tpp  one_to_many_store.h  one_to_many_store.tpp  one_to_one_store.h  one_to_one_store.tpp
Team11/Code11/src/spa/include/pkb/abstraction/: AbstractRelationship.cpp  AbstractRelationship.h  OneToManyStore.h  OneToOneStore.h  many_to_many_store.h  many_to_one_store.h  one_to_many_store.h  one_to_one_store.tpp
Team11/Code11/src/spa/include/pkb/common_types/: constant.h  entity.h  procedure.h  statement.h  statement_number.h  variable.h
Team11/Code11/src/spa/include/pkb/facades/: read_facade.h  write_facade.h
Team11/Code11/src/spa/include/pkb/stores/: assignment_store.h  calls_store.h  entity_store.h  follows_store.h  modifies_store.h  next_store.h  parent_store.h  proc_to_stmt_nos_store.h  statement_store.h  uses_store.h
Team11/Code11/src/spa/include/qps/: parser.hpp  qps.hpp  template_utils.hpp
Team11/Code11/src/spa/include/qps/evaluators/: data_source.hpp  pattern_clause_evaluator.hpp  query_evaluator.hpp  results_map.hpp  results_table.hpp  simple_evaluator.hpp  type_traits.hpp  with_evaluator.hpp
Team11/Code11/src/spa/include/qps/optimisers/: default.hpp  grouping.hpp  opposite.hpp  optimiser.hpp  priority.hpp  redundancy.hpp  subsumption_relation.tpp  subsumption_rewrite.hpp
Team11/Code11/src/spa/include/qps/parser/: concepts.hpp  errors.hpp  expression_parser.hpp  parser.hpp  parser_helper.hpp  pattern_analyser.hpp  relationship_analyser.hpp  relationship_analyser.tpp  semantic_analyser.hpp  semantic_analyser.tpp  semantic_analyser_helper.hpp  semantic_validator.hpp  semantic_validator.tpp
Team11/Code11/src/spa/include/qps/tokeniser/: attrname_tokeniser.hpp  binop.hpp  miscellaneous.hpp  qps_delimiter.hpp  relationship_tokeniser.hpp  tokeniser.hpp  utils.hpp  wildcard_tokeniser.hpp
Team11/Code11/src/spa/include/qps/utils/: affects_conditions.h  algo.h
Team11/Code11/src/spa/include/sp/: Parser.h  main.hpp
Team11/Code11/src/spa/include/sp/annotator/: annotator.hpp  ast_annotator.hpp  stmt_num_annotator.hpp
Team11/Code11/src/spa/include/sp/cfg/: cfg_builder.hpp  program_cfgs.hpp
Team11/Code11/src/spa/include/sp/parser/: assignment_parser.hpp  cond_expr_parser.hpp  constant_parser.hpp  expr_parser.hpp  factor_parser.hpp  name_parser.hpp  parser.hpp  procedure_parser.hpp  program_parser.hpp  rel_expr_parser.hpp  statement_keyword_const.hpp  (+3 more)
Team11/Code11/src/spa/src/: DesignExtractor.cpp  PKB.cpp  PKB.h  Parser.cpp
Team11/Code11/src/spa/src/PKB/: PKB.cpp
Team11/Code11/src/spa/src/pkb/: PKB.cpp  pkb.cpp  pkb_manager.cpp
Team11/Code11/src/spa/src/qps/: clause.cpp  parser.cpp  qps.cpp  relationship.cpp  semantic_validator.cpp
Team11/Code11/src/spa/src/sp/: DesignExtractor.cpp  Parser.cpp  TNode.cpp  main.cpp
Team11/Code11/src/unit_testing/: CMakeLists.txt
Team11/Code11/src/unit_testing/include/: test_evaluator.hpp  utils.hpp
Team11/Code11/src/unit_testing/src/: TestAST.cpp  main.cpp
Team11/Code11/src/unit_testing/src/common/: TestBinOpTokenizer.cpp  TestDelimiter.cpp  TestIntegerTokenizer.cpp  TestJunk.cpp  TestStringTokenizer.cpp
Team11/Code11/src/unit_testing/src/qps/: TestExpressionParser.cpp  TestParser.cpp  TestQPS.cpp  TestSynonym.cpp  TestTokenizer.cpp
Team11/Code11/src/unit_testing/src/sp/: TestSP.cpp  TestSPLogical.cpp  TestSPRelational.cpp  TestSPTokenizer.cpp
Team11/Code11/tests/: .gitignore  run_autotester.py  view_ast_xml.html
Team11/Code11/tests/Xml2Tree/: xml2tree.js
(+457 files in other folders)
